# ay_trick

ay_skill/: _default.py.sample.py  _exit.py.sample.py  aandd_weight.py  attr.py  displevel.py  fk.py  g_traj.py  grip.py  hello.py  init.py  j.py  keyctrl3.py  keyctrlrq.py  m100.py  movedx.py  movedxi.py  moveq.py  movex.py  movexe.py  movexei.py  movexi.py  play_q_g.py  plot.py  q.py  rec_q_g.py  rec_rs.py  robot.py  robot_rs2.py  rs2_joycalib.py  scene.py  sm_tools.py  template.py  tf_once.py  th.py  velctrl.py  viz.py  wrench.py  wrist_rs2.py  x.py  xe.py  (+1 more)
ay_skill/adv/: infer_bb.py  infer_x.py  move_to_x.py  plan_traj.py
ay_skill/bx/: README.py  tqctrl.py  velctrl.py
ay_skill/bx/test/: bxpubf.py  bxrange.py  bxtrack.py  bxtrackf.py  bxtrackf2.py  vizf.py
ay_skill/data/robot/: gripper_moto_rq.yaml  gripper_motomangp7_thg.yaml  gripper_motomangp8_geh6060il.yaml  gripper_motomangp8_thg.yaml  gripper_motomanhc10sdtp_thg.yaml  gripper_motomansg650_geh6060il.yaml  gripper_motomansg650_thg.yaml  gripper_motomini_thg.yaml  gripper_ur_thg.yaml
ay_skill/dxlg/: off.py  on.py
ay_skill/ex/: README.py  collision1.py  collision2.py  collision3.py  fk1.py  follow_q_traj1.py  follow_x_traj1.py  follow_x_traj2.py  fv_grip1.py  fv_grip2.py  get_q1.py  get_x1.py  grip1.py  ik1.py  move_q1.py  move_x1.py  plan_x1.py  put_box.py  viz.py
ay_skill/fv/: ctrl_params.py  fv.py  grasp.py  hold.py  inhand.py  inhand2.py  monitor.py  move_pick_demo.py  open.py  openif.py  pickup.py  pickup2.py  pickup2a.py  pickup2b.py  put.py  repeat_p_p_demo.py  trackf.py  trackf2.py  trackf3.py  trackf4.py  tracko.py  vizdiff.py
ay_skill/gen3/: setup.py  velctrl.py  velctrl_sim.py
ay_skill/mikata/: config.py  effort.py  move_to_init.py  move_to_park.py  off.py  on.py  reboot.py  setup.py  velctrl_p.py
ay_skill/mikata/test/: jacobian1.py
ay_skill/moto/: README.py  moto_mngr.py  velctrl.py
ay_skill/rq/: README.py  init.py
ay_skill/test/: jg2f2.py  node1.py  pp3.py  rs2_markercalib.py  seq_motion.py  seq_motion_lin.py  test.py  viz_jaco.py  viz_jaco2.py  viz_jaco3.py
ay_skill/tsim/: clean.py  config1.py  core1.py  dplD14.py  dplD14log.py  dplD14replay.py  dpl_cmn.py  sm4.py  test1.py
ay_skill/tsim2/: dplD20.py  dplD21.py  dplD22.py  dplD23.py  est01.py  est01_true.py  est01a.py  est01b.py  est01c.py  est01x_exp1a.py  est01x_exp1b.py  setup.py  test_act.py  test_dpl1a.py  test_dpl1b.py  test_pause.py  test_replay.py  test_spline.py  test_splinex.py
ay_skill/tsim2/act/: _tmpl.py  grab.py  move_to_pour.py  move_to_rcv.py  shake_A.py  std_pour.py
ay_skill/tsimh1/: clean.py  core1.py  spline1.py  test1.py
ay_skill/ur/: README.py  setup.py  teach.py  ur_mngr.py  velctrl.py  velctrl_ros.py  velctrl_ros2.py
ay_trick/: CMakeLists.txt  package.xml  setup.py
ay_trick/scripts/: core_tool.py  cui_over_ros_node.py  cui_tool.py  direct_run.py  ros_node.py
ay_trick_msgs/: CMakeLists.txt  package.xml
