<?xml version="1.0"?>
<package format="2">
  <name>ay_trick</name>
  <version>0.0.0</version>
  <description>The ay_trick package</description>

  <author email="info@akihikoy.net">Akihiko Yamaguchi</author>
  <maintainer email="info@akihikoy.net">Akihiko Yamaguchi</maintainer>
  <license>Described in LICENSE</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <exec_depend>python2</exec_depend>

  <export>
  </export>
</package>
